# fredco-audit

./: .gitattributes  .gitignore  CLAUDE.md  CNAME  ROADMAP.md  about.html  blog-post.md  budget.html  data.html  demographics.html  education.html  feedback.css  feedback.js  index.html  map.html  playground.html  property.html  real_estate.html  requirements.txt  schools.html
playground/: Cargo.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
playground/data-engine/: Cargo.toml
playground/data-engine/src/: lib.rs
playground/public/: parquet
playground/src/: main.ts
playground/src/engines/: chart.ts  data.ts  editor.ts  feedback.ts  map.ts  notes.ts  storage.ts
playground/types/: Cargo.toml
playground/types/src/: chart.rs  data.rs  editor.rs  lib.rs  messages.rs  notes.rs  storage.rs
schemas/: enrollment.json  expenditures.json  ratios.json  staffing.json
scripts/: analyze_real_estate_owners.py  calculate_audit_metrics.py  calculate_metrics.py  classify_names_llm.py  consolidate_metrics.py  convert_to_parquet.py  download_cip_layers.py  download_county_parcels.py  download_data.py  download_nces_data.py  download_parcels.py  enrich_districts_with_ownership.py  extract_county_detail.py  generate_dashboards.py  generate_real_estate_analysis.py  integrate_historical_data.py  parse_county_budget.py  parse_county_budget_v2.py  parse_excel.py  parse_nces_f33.py  parse_pdf.py  parse_real_estate_tax.py  parse_single_tax_year.py
specs/: 00-architecture.md  01-ui-shell.md  02-data-engine.md  03-chart-engine.md  04-editor-engine.md  (+3 more)
(+111 files in other folders)
