[workspace]
resolver = "2"
members = [
    "types",
    "data-engine",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/EthnTuttle/fredco-audit"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
tsify = { version = "0.4", features = ["js"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "WorkerGlobalScope",
    "MessageEvent",
    "Worker",
] }

# Async
futures = "0.3"

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"
